language/move-lang/tests/move_check/expansion/invalid_unpack_assign_lhs_other_value.move
module M {
    fun foo() {
        0 {} = 0;

        foo() = 0;

        foo().bar() = 0;
    }
}
